--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -6,7 +6,7 @@
   border-bottom: 0px;
   background: $white-color;
   font-weight: 400;
-  color: $dark-blue-text;
+  color: white;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
@@ -14,15 +14,14 @@
   bottom: 0;
   right: 0;
   z-index: -1;
-
   // Set position sticky so the jumbotron stays fixed while you scroll.
-  // position: sticky;
+  position: sticky;
 
   // If you want to set a background image on the hero section, uncomment these with yout custom image
 
-  /* background: url("/src/assets/[your-image].png");
+  background: url("https://images.pexels.com/photos/924824/pexels-photo-924824.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
   background-position: center;
-  background-size: cover; */
+  background-size: cover;
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
