--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -19,7 +19,7 @@
 
   // If you want to set a background image on the hero section, uncomment these with yout custom image
 
-  background: url("https://images.pexels.com/photos/924824/pexels-photo-924824.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
+  background: url("https://sn3302files.storage.live.com/y4mBg9eUmKSd4gDgm0aH-EUPCVroI3JCCXchkMKuwc2MsnDTj5EpomJKtscvHgxT_Oww8EuX82eU6AYlEWn3VYQqyy_AVteMU7Qufz0IfEG0M_2VsBgPq8Kxi4QBoAD-ti8xHk49ZfThsey21x8G4lCbFkIN9R3MYCCjdca9FkhMPf8QfaYTYZfsutEZK8sGqzv?width=1000&height=667&cropmode=none");
   background-position: center;
   background-size: cover;
 
