--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -1,9 +1,7 @@
 #contact {
-  background-image: linear-gradient(
-    135deg,
-    $primary-color 0%,
-    $secondary-color 100%
-  );
+  background-image: url('https://ik.imagekit.io/d5scjfbjc/3_LJEzCVOU3b.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
