--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,11 +15,11 @@
   right: 0;
   z-index: -1;
   // Set position sticky so the jumbotron stays fixed while you scroll.
-  position: sticky;
+//   position: sticky;
 
   // If you want to set a background image on the hero section, uncomment these with yout custom image
 
-  background: url("https://sn3302files.storage.live.com/y4mBg9eUmKSd4gDgm0aH-EUPCVroI3JCCXchkMKuwc2MsnDTj5EpomJKtscvHgxT_Oww8EuX82eU6AYlEWn3VYQqyy_AVteMU7Qufz0IfEG0M_2VsBgPq8Kxi4QBoAD-ti8xHk49ZfThsey21x8G4lCbFkIN9R3MYCCjdca9FkhMPf8QfaYTYZfsutEZK8sGqzv?width=1000&height=667&cropmode=none");
+  background: url("https://ik.imagekit.io/d5scjfbjc/1_rHC4Pgzdv.svg");
   background-position: center;
   background-size: cover;
 
