--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,3 +1,23 @@
+.logo{
+  position:fixed;
+  top:0;
+  left:50%;
+  transform:translateX(-50%);
+  padding:1em;
+  z-index:1000;
+  font-size: 1.9em;
+  color: #2e008b;
+  background: #fff;
+  width: 100%;
+}
+.logo-name{
+  background: #fff;
+}
+.imaginary-container{
+  width:100%;
+  height:100vh;
+  background:#2e008b;
+}
 #hero {
   min-height: 100vh;
   height: 100vh;
